# accio

./: Justfile  README.md  pyproject.toml
accio/: __init__.py
accio/engines/: chdb.py  datafusion.py  duckdb.py  polars.py  spark.py
benchmark/: bench_chdb.py  bench_datafusion.py  bench_duckdb.py  bench_polars.py  bench_spark.py  bench_trino.py
rewriter/: pom.xml
workload/job2_v0/: q01a.sql  q01b.sql  q01c.sql  q01d.sql  q02c.sql  q03a.sql  q03b.sql  q03c.sql  q04a.sql  q04b.sql  q04c.sql  q05a.sql  q05b.sql  q05c.sql  q06a.sql  q06b.sql  q06c.sql  q06d.sql  q06e.sql  q06f.sql  q07a.sql  q07b.sql  q07c.sql  q08a.sql  q08b.sql  q08c.sql  q08d.sql  q09a.sql  q09b.sql  q09c.sql  q09d.sql  q10a.sql  q10b.sql  q10c.sql  q11b.sql  q11c.sql  q11d.sql  q12a.sql  q12b.sql  q12c.sql  (+62 more)
workload/job2_v1/: q01a.sql  q01b.sql  q01c.sql  q01d.sql  q02a.sql  q02b.sql  q02c.sql  q02d.sql  q03a.sql  q03b.sql  q03c.sql  q04a.sql  q04b.sql  q04c.sql  q05a.sql  q05b.sql  q05c.sql  q06a.sql  q06b.sql  q06c.sql  q06d.sql  q06e.sql  q06f.sql  q07a.sql  q07b.sql  q07c.sql  q08a.sql  q08b.sql  q08c.sql  q08d.sql  q09a.sql  q09b.sql  q09c.sql  q09d.sql  q10a.sql  q10b.sql  q10c.sql  q11a.sql  q11b.sql  q11c.sql  (+73 more)
workload/job2_v2/: q01a.sql  q01b.sql  q01c.sql  q01d.sql  q02a.sql  q02b.sql  q02d.sql  q04a.sql  q04b.sql  q04c.sql  q05a.sql  q05b.sql  q05c.sql  q06a.sql  q06b.sql  q06c.sql  q06d.sql  q06e.sql  q06f.sql  q07a.sql  q07b.sql  q07c.sql  q08a.sql  q08b.sql  q08c.sql  q08d.sql  q09a.sql  q09b.sql  q09c.sql  q09d.sql  q10a.sql  q10b.sql  q10c.sql  q11a.sql  q12a.sql  q12b.sql  (+66 more)
(+225 files in other folders)
